--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   },
   "homepage": "https://github.com/redotomi/pokedex-con-pokeapi#readme",
   "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "babel-jest": "^28.1.1",
     "cypress": "^9.7.0",
     "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.1"
   }
 }
