--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "cy:open": "cypress open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch",
+    "test:coverage": "jest --collect-coverage"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
+    "@types/jest": "^28.1.1",
     "babel-jest": "^28.1.1",
     "cypress": "^9.7.0",
     "eslint": "^8.16.0",
